# RustAPIJWTTutorial

./: Cargo.toml  README.md  users.db
src/: auth.rs  db.rs  main.rs  models.rs
src/db_interactions/: mod.rs
src/db_interactions/db/: mod.rs  models.rs
src/utils/: admin.rs  login.rs  mod.rs  register.rs
