[package]
name = "RustAPIJWTTutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
# those three dependencies are related to axum
axum = "0.7.7"
tower = "0.5.1"
tokio = { version = "1.25.0", features = ["full"] }

jsonwebtoken = "8" # used for managing your JWT tokens
bcrypt = "0.15" # to hash
dotenv = "0.15" # allows to manage your environment variables

sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] } # to communicate with DB sqlite. 
# The 'features' argument contains the selection of runtime (Mandatory!)
# Otherwise, you'll get: error: one of the features ['runtime-actix-native-tls', 'runtime-async-std-native-tls', 'runtime-tokio-native-tls', 'runtime-actix-rustls', 'runtime-async-std-rustls', 'runtime-tokio-rustls'] must be enabled
reqwest = { version = "0.11", features = ["tokio-rustls"] } # selects TLS package required to communicate with DB. Matched with tokio version.
serde = { version = "1.0.132", features = ["derive"] } # used for communicating with DB
serde_json = "1.0.73" # to convert Rust data structures to JSON and vice-versa
syn = "1.0.109"
